Kubernets/importglx.yaml
apiVersion: v1
kind: Service
metadata:
  name: importglx-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: importglx-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: importglx
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importglx-deployment
  labels:
    app: importglx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: importglx
  template:
    metadata:
      labels:
        app: importglx
    spec:
      containers:
      - name: importglx
        image: wultyc/arqsi-viajantes2:importglx
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
