Kubernets/importglx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: importglx-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: importglx-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3002
  selector:
    app: importglx
  sessionAffinity: None
