Kubernets/redemasterdata_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemasterdata-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: redemasterdata-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3003
  selector:
    app: redemasterdata
  sessionAffinity: None
