Kubernets/viagemmasterdata.yaml
apiVersion: v1
kind: Service
metadata:
  name: viagemmasterdata
  labels:
    app: viagemmasterdata
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: viagemmasterdata
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viagemmasterdata-deployment
  labels:
    app: viagemmasterdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viagemmasterdata
  template:
    metadata:
      labels:
        app: viagemmasterdata
    spec:
      containers:
      - name: viagemmasterdata
        image: wultyc/arqsi-viajantes2:viagemmasterdata-BUILD_NR
        imagePullPolicy: Always
        ports:
        - containerPort: 80
