Kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arqsi-viajantes2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: viajantes2.tk
    http:
      paths:
      - backend:
          serviceName: viajantes2-spa
          servicePort: 80
  - host: importglx.viajantes2.tk
    http:
      paths:
      - backend:
          serviceName: importglx
          servicePort: 80
  - host: redemasterdata.viajantes2.tk
    http:
      paths:
      - backend:
          serviceName: redemasterdata
          servicePort: 80
